objects/Vosf_Validation__c.object
<CustomObject>
    <fields>
        <fullName>Dependent_Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dependent Question</label>
        <referenceTo>Vosf_Question__c</referenceTo>
        <relationshipLabel>Validations (Dependent Question)</relationshipLabel>
        <relationshipName>Vosf_Validations_Dependant_Question</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Operator__c</fullName>
        <label>Operator</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>=</fullName>
                </value>
                <value>
                    <fullName>&gt;</fullName>
                </value>
                <value>
                    <fullName>&lt;</fullName>
                </value>
                <value>
                    <fullName>!=</fullName>
                </value>
                <value>
                    <fullName>&gt;=</fullName>
                </value>
                <value>
                    <fullName>&lt;=</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Question__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Question</label>
        <referenceTo>Vosf_Question__c</referenceTo>
        <relationshipLabel>Validations</relationshipLabel>
        <relationshipName>Vosf_Validations_Question</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Validation</label>
    <nameField>
        <label>Vosf Validation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Validations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>